--- a/application.css
+++ b/application.css
@@ -255,43 +255,36 @@ legend {
 
 .options-table {
   --_label-height: calc(2 * var(--_text-font-size));
-  --_input-height: calc(4 * var(--_text-font-size));
   
-  --_border-width: 3px;
-  --_border-margin-top: var(--_label-height);
+  /* --_border-width: 3px; */
+  /* --_border-margin-top: var(--_label-height); */
+  
   --_cutoff-gap: 2px;
   --_cutoff-width: calc(var(--_label-height) / 2);
   --_block-cutoff-width: calc(var(--_cutoff-width) / 2);
   
   --_cutoff-offset: calc(var(--_cutoff-gap) + var(--_block-cutoff-width)*2);
+  
   margin: 1em var(--_cutoff-offset);
-
   width: calc(100% - var(--_cutoff-offset)*2);
   
   display: grid;
   grid-template-rows: auto auto;
   
   & table {
-    display: grid;
-    grid-template-columns: minmax(4ch, 10%) 1fr;
-    grid-template-rows: var(--_label-height) 1fr auto;
-    
     border: 1px solid var(--clr-primary-400);
+    border-collapse: collapse;
+    text-align: center;
   }
   
-  justify-items: center stretch;
-  
-  & :is(thead, tbody, tfooter, tr) {
-    display: contents;
-  }
-  
-  & thead th {
+  & thead {
+    /* height: var(--_label-height); */
     background-color: var(--clr-primary-400);
     color: var(--clr-neutral-100);
   }
   
-  & thead th:first-of-type {
-    border-right: 1px solid var(--clr-neutral-100);
+  & thead th {
+    border-right-color: var(--clr-neutral-100);
   }
   
   & tr:nth-of-type(even) * {
@@ -299,12 +292,11 @@ legend {
   }
   
   & th {
-    border-right: 1px solid var(--clr-primary-400);
+    border-inline: 1px solid var(--clr-primary-400);
   }
   
-  & th, & td {
-    padding-block: .25em;
-    text-align: center;
+  & :is(th, td) {
+    padding-block: .35em;
   }
   
   & .btn-action {
