--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,1 +1,341 @@
-/* Application styles */
+:root {
+  --clr-neutral-100: white;
+  --clr-neutral-900: black;
+  --clr-primary-400: red;
+  --clr-secondary-400: orange;
+  
+  --fs-100: 0.354rem;
+  --fs-200: 0.5rem;
+  --fs-300: 0.707rem;
+  --fs-400: 1rem;
+  --fs-500: 1.414rem;
+  --fs-600: 1.999rem;
+  --fs-700: 2.827rem;
+  --fs-800: 3.998rem;
+  --fs-900: 5.653rem;
+  
+  --ff-body: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+  --ff-heading: Bahnschrift, 'DIN Alternate', 'Franklin Gothic Medium', 'Nimbus Sans Narrow', sans-serif-condensed, sans-serif;
+  --ff-heading-xl: Rockwell, 'Rockwell Nova', 'Roboto Slab', 'DejaVu Serif', 'Sitka Small', serif;
+  --fs-cursive: 'Segoe Print', 'Bradley Hand', Chilanka, TSCu_Comic, casual, cursive;
+}
+
+*,
+:after,
+:before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box
+}
+
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  --_text-color: var(--clr-neutral-900);
+  --_text-font-size: var(--fs-400);
+  
+  color: var(--_text-color);
+  font-size: var(--_text-font-size);
+  font-family: var(--ff-body);
+  
+  counter-reset: section -1;
+}
+
+fieldset {
+  position: relative;
+  
+  border: none;
+  border-left: 50px solid var(--clr-primary-400);
+  
+  min-height: 100vh;
+  padding: 0;
+  
+  width: 40%; /* FIXME: not too fond of this way to limit the form's width (and it's doesn't work well on small devices) */
+  
+  counter-increment: section;
+}
+
+legend {
+  color: var(--clr-primary-400);
+  
+  font-family: var(--ff-heading);
+  position: absolute;
+  
+  font-size: var(--fs-800);
+  text-transform: lowercase;
+  left: 1rem;
+  bottom: 1rem;
+  
+  &::before {
+    content: counter(section); 
+    display: block;
+    position: absolute;
+    text-align: center;
+    vertical-align: bottom;
+    font-size: var(--fs-900);
+    line-height: 100%;
+    color: var(--clr-neutral-100);
+    left: calc(-1rem - 50px);
+    bottom: 0;
+    width: 50px;
+  }
+}
+
+.field {
+  --_label-height: calc(2 * var(--_text-font-size));
+  --_input-height: calc(4 * var(--_text-font-size));
+  
+  --_border-width: 3px;
+  --_border-margin-top: var(--_label-height);
+  --_cutoff-gap: 2px;
+  --_cutoff-width: calc(var(--_label-height) / 2);
+  --_block-cutoff-width: calc(var(--_cutoff-width) / 2);
+  --_arrow-cutoff-width: calc(2 * var(--_block-cutoff-width));
+  
+  --_cutoff-offset: calc(var(--_cutoff-gap) + var(--_block-cutoff-width)*2);
+  margin: 1em var(--_cutoff-offset);
+  
+  display: grid;
+  grid-template-rows: var(--_label-height) var(--_input-height);
+  
+  position: relative;
+  isolation: isolate;
+  
+  font-size: var(--_text-font-size);
+  
+  & label {
+    display: block;
+    color: var(--clr-primary-400);
+    background-color: transparent;
+    
+    place-self: end left;
+  }
+  
+  & input {
+    --_text-font-size: var(--fs-600);
+    font-size: var(--_text-font-size);
+    font-family: var(--fs-cursive);
+    
+    margin: .25em .5em;
+    
+    border: none;
+    
+    place-self: stretch left;
+    
+    &:focus-visible {
+      border: none;
+      outline: none;
+    }
+  }
+  
+  /* outer slanted background (red) */
+  &::before {
+    position: absolute;
+    content: '';
+    display: block;
+    z-index: -2;
+    
+    inset: 0;
+    background: var(--clr-primary-400);
+    clip-path: polygon(0% var(--_border-margin-top),
+                       calc(100% - var(--_cutoff-width)) var(--_border-margin-top),
+                       100% calc(var(--_cutoff-width) + var(--_border-margin-top)),
+                       100% 100%,
+                       var(--_cutoff-width) 100%,
+                       0 calc(100% - var(--_cutoff-width)));
+  }
+  
+  /* inner slanted background (white) */
+  &::after {
+    --_cutoff-width: calc(1em - (var(--_border-width) / 2)); /* smaller cutoff to make up for the border width */
+    
+    position: absolute;
+    content: '';
+    display: block;
+    z-index: -1;
+    
+    inset: var(--_border-width);
+    background: var(--clr-neutral-100);
+    clip-path:  polygon(0% var(--_border-margin-top),
+                        calc(100% - var(--_cutoff-width)) var(--_border-margin-top),
+                        100% calc(var(--_cutoff-width) + var(--_border-margin-top)),
+                        100% 100%,
+                        var(--_cutoff-width) 100%,
+                        0% calc(100% - var(--_cutoff-width)));
+  }
+  
+  &:has(input[required]) label::after {
+    position: absolute;
+    content: '';
+    
+    top: var(--_border-margin-top);
+    right: 0;
+    width: var(--_cutoff-width);
+    aspect-ratio: 1;
+    
+    background-color: var(--clr-primary-400);
+    clip-path: polygon(var(--_cutoff-gap) 0, 100% 0%, 100% calc(100% - var(--_cutoff-gap)));
+  }
+  
+  &:has(input:focus-visible) label::before {
+    position: absolute;
+    content: '';
+    
+    top: var(--_border-margin-top);
+    bottom: 0;
+    left: calc(-1 * var(--_block-cutoff-width) - var(--_cutoff-gap));
+    width: calc(var(--_cutoff-width) * 2);
+    
+    background-color: var(--clr-primary-400);
+    clip-path: polygon(0 0, 
+                       var(--_block-cutoff-width) 0,
+                       var(--_block-cutoff-width) calc(100% - var(--_cutoff-width)),
+                       calc(100% - calc(3 * var(--_border-width))) 100%, /* the x3 multiplier is a magic number found by trial and error */
+                       0 100%);
+  }
+  
+  &:has(.options-carousel) {
+    --_cutoff-offset: calc(var(--_cutoff-gap) + var(--_arrow-cutoff-width) + var(--_block-cutoff-width)*3);
+  }
+  
+  & .options-carousel {
+    margin: 0;
+    padding: 0;
+    
+    display: contents;
+  }
+  
+  & .options-carousel button {
+    position: absolute;
+    border: none;
+    
+    background-color: var(--clr-primary-400);
+    color: white;
+    
+    top: var(--_border-margin-top);
+    bottom: 0;
+    
+    --_button-width: calc((2 * var(--_arrow-cutoff-width)) + var(--_cutoff-width));
+    width: var(--_button-width);
+  }
+  
+  & .options-carousel button:active {
+    background-color: var(--clr-secondary-400);
+  }
+  
+  & .options-carousel button.back {
+    left: calc((-1 * var(--_button-width)) - var(--_cutoff-gap) + var(--_cutoff-width));
+    
+    clip-path: polygon(
+      0 50%,
+      var(--_arrow-cutoff-width) 0,
+      calc(var(--_arrow-cutoff-width) + var(--_cutoff-width)) 0,
+      calc(var(--_arrow-cutoff-width) + var(--_cutoff-width)) calc(100% - var(--_cutoff-width)),
+      calc(100% - calc(.5 * var(--_border-width))) 100%,
+      var(--_arrow-cutoff-width) 100%
+    );
+
+  }
+  
+  & .options-carousel button.forward {
+    right: calc((-1 * var(--_arrow-cutoff-width)) - var(--_cutoff-gap) - var(--_cutoff-width));
+    
+    clip-path: polygon(
+      0% 0%,
+      calc(var(--_arrow-cutoff-width) + var(--_cutoff-width)) 0%,
+      100% 50%,
+      calc(var(--_arrow-cutoff-width) + var(--_cutoff-width)) 100%,
+      var(--_cutoff-width) 100%,
+      var(--_cutoff-width) var(--_cutoff-width)
+    );
+  }
+}
+
+.options-table {
+  --_label-height: calc(2 * var(--_text-font-size));
+  
+  /* --_border-width: 3px; */
+  /* --_border-margin-top: var(--_label-height); */
+  
+  --_cutoff-gap: 2px;
+  --_cutoff-width: calc(var(--_label-height) / 2);
+  --_block-cutoff-width: calc(var(--_cutoff-width) / 2);
+  
+  --_cutoff-offset: calc(var(--_cutoff-gap) + var(--_block-cutoff-width)*2);
+  
+  margin: 1em var(--_cutoff-offset);
+  width: calc(100% - var(--_cutoff-offset)*2);
+  
+  display: grid;
+  grid-template-rows: auto auto;
+  
+  & table {
+    border: 1px solid var(--clr-primary-400);
+    border-collapse: collapse;
+    text-align: center;
+  }
+  
+  & thead {
+    /* height: var(--_label-height); */
+    background-color: var(--clr-primary-400);
+    color: var(--clr-neutral-100);
+  }
+  
+  & thead th {
+    border-right-color: var(--clr-neutral-100);
+  }
+  
+  & tr:nth-of-type(even) * {
+    background-color: #eaeaea;
+  }
+  
+  & tr[data-options-table-target='option'] {
+    cursor: pointer;
+  }
+  
+  & tr[data-options-table-target='option']:is(.selected, :hover) {
+    outline: 3px solid var(--clr-secondary-400);
+    outline-left-width: 6px;
+  }
+  
+  & th {
+    border-inline: 1px solid var(--clr-primary-400);
+  }
+  
+  & :is(th, td) {
+    padding-block: .35em;
+  }
+  
+  & .btn-action {
+    --_border-margin-top: 0%;
+    --_cutoff-width: .75em;
+    
+    display: inline-block;
+    width: auto;
+    
+    justify-self: right;
+    
+    background-color: var(--clr-primary-400);
+    color: var(--clr-neutral-100);
+    border: none;
+    padding: .5em 1em;
+    
+    font-family: var(--ff-heading);
+    
+    margin-top: .5em;
+    font-size: var(--fs-400);
+    font-weight: 500;
+    
+    clip-path: polygon(
+      0% var(--_border-margin-top),
+      calc(100% - var(--_cutoff-width)) var(--_border-margin-top),
+      100% calc(var(--_cutoff-width) + var(--_border-margin-top)),
+      100% 100%,
+      var(--_cutoff-width) 100%,
+      var(--_border-margin-top) calc(100% - var(--_cutoff-width))
+   );
+  }
+}
+
